fix(breadcrumb, connect, summary): link underline contrast

--- a/src/component/breadcrumb/style/_module.scss
+++ b/src/component/breadcrumb/style/_module.scss
@@ -5,6 +5,7 @@
 
 @use 'module/spacing';
 @use 'module/selector';
+@use 'module/preference';
 
 /**
 un padding de 4px et une marge négative en compensation sont mis en place afin d'éviter de couper le focus.
@@ -83,10 +84,19 @@ un padding de 4px et une marge négative en compensation sont mis en place afin 
     @include hover-underline;
     @include padding(0);
 
+    @include preference.forced-colors {
+      text-decoration: underline;
+      text-underline-offset: 5px;
+    }
+
     @include selector.current {
       pointer-events: none;
       cursor: default;
       @include disable-underline;
+
+      @include preference.forced-colors {
+        text-decoration: none;
+      }
     }
   }
 }
